src/main/kotlin/ch/erlebnisbank/smarty/Smarty.bnf
{
  parserClass="ch.erlebnisbank.smarty.parser.SmartyParser"
  // No parserUtilClass: the grammar has no external or meta rules, so the generated parser
  // only needs the platform's GeneratedParserUtilBase, which Grammar-Kit imports by default.

  elementTypeHolderClass="ch.erlebnisbank.smarty.psi.SmartyTypes"
  elementTypeClass="ch.erlebnisbank.smarty.psi.SmartyElementType"
  tokenTypeClass="ch.erlebnisbank.smarty.psi.SmartyTokenType"

  psiPackage="ch.erlebnisbank.smarty.psi"
  psiImplPackage="ch.erlebnisbank.smarty.psi.impl"
  psiImplUtilClass="ch.erlebnisbank.smarty.psi.impl.SmartyPsiImplUtil"

  tokens = [
    // Delimiters
    LDELIM = "{"
    RDELIM = "}"

    // Operators
    ASSIGN = "="
    PIPE = "|"
    DOT = "."
    ARROW = "->"
    COMMA = ","
    SEMICOLON = ";"
    COLON = ":"
    QUESTION = "?"

    // Brackets
    LPAREN = "("
    RPAREN = ")"
    LBRACKET = "["
    RBRACKET = "]"

    // Arithmetic operators
    PLUS = "+"
    MINUS = "-"
    MULT = "*"
    DIV = "/"
    MOD = "%"
    MOD_KEYWORD = "mod"
    DIV_KEYWORD = "div"

    // Comparison operators
    EQ = "=="
    NEQ = "!="
    EQEQ = "==="
    NEQEQ = "!=="
    LT = "<"
    GT = ">"
    LE = "<="
    GE = ">="

    // Textual equivalents of the comparison operators. The lexer also accepts the second
    // spelling where Smarty documents one: ne for neq, ge for gte, le for lte.
    // https://smarty-php.github.io/smarty/stable/designers/language-basic-syntax/language-syntax-operators
    EQ_KEYWORD = "eq"
    NEQ_KEYWORD = "neq"
    LT_KEYWORD = "lt"
    GT_KEYWORD = "gt"
    LE_KEYWORD = "lte"
    GE_KEYWORD = "gte"

    // Regular expression match: {if $a matches "/^[a-z]+$/"}, PHP's preg_match($b, $a).
    // It has no symbolic spelling, so it is a comparison operator that only exists as a word.
    MATCHES = "matches"

    // Logical operators
    AND = "&&"
    OR = "||"
    NOT = "!"
    AND_KEYWORD = "and"
    OR_KEYWORD = "or"
    NOT_KEYWORD = "not"

    // Keywords
    IF = "if"
    ELSE = "else"
    ELSEIF = "elseif"
    FOREACH = "foreach"
    FOREACHELSE = "foreachelse"
    FOR = "for"
    WHILE = "while"
    SECTION = "section"
    SECTIONELSE = "sectionelse"
    SWITCH = "switch"
    CASE = "case"
    DEFAULT = "default"
    BREAK = "break"
    CONTINUE = "continue"
    BLOCK = "block"
    FUNCTION = "function"
    CALL = "call"
    EXTENDS = "extends"
    INCLUDE = "include"
    INSERT = "insert"
    ASSIGN_KW = "assign"
    APPEND = "append"
    PREPEND = "prepend"
    CAPTURE = "capture"
    CONFIG_LOAD = "config_load"
    DEBUG = "debug"
    LITERAL_KW = "literal"
    NOCACHE = "nocache"
    SETFILTER = "setfilter"
    STRIP = "strip"
    LDELIM_KW = "ldelim"
    RDELIM_KW = "rdelim"

    // Modifiers
    UPPER = "upper"
    LOWER = "lower"
    CAPITALIZE = "capitalize"
    CAT = "cat"
    COUNT_PARAGRAPHS = "count_paragraphs"
    COUNT_SENTENCES = "count_sentences"
    COUNT_WORDS = "count_words"
    DATE_FORMAT = "date_format"
    ESCAPE = "escape"
    FROM_CHARSET = "from_charset"
    INDENT = "indent"
    NL2BR = "nl2br"
    REGEX_REPLACE = "regex_replace"
    REPLACE = "replace"
    SPACIFY = "spacify"
    STRING_FORMAT = "string_format"
    STRIP_TAGS = "strip_tags"
    TO_CHARSET = "to_charset"
    TRUNCATE = "truncate"
    UNESCAPE = "unescape"
    WORDWRAP = "wordwrap"
    DEFAULT_MOD = "default"

    // Special
    AT = "@"
    DOLLAR = "$"
    HASH = "#"
    FAT_ARROW = "=>"

    // Literals produced by the lexer
    TRUE = "true"
    FALSE = "false"
    NULL_LITERAL = "null"

    // Produced by the lexer only, never written in a rule
    TEXT = "text"
    WS = "ws"
    BAD_CHARACTER = "bad_character"

    // Token patterns
    comment = "regexp://.*"
    identifier = "regexp:[a-zA-Z_]\w*"
    number = "regexp:\d+(\.\d*)?([eE][+-]?\d+)?"
    string = "regexp:(\"([^\"\\\\]|\\\\.)*\"|'([^'\\\\]|\\\\.)*')"
    html_tag = "regexp:<[^>]+>"
    whitespace = "regexp:\s+"
  ]

  name(".*_expr")="expression"
  extends(".*_expr")=expr

  pin(".*_list")=1
}

// ============================================================================
// ROOT RULE
// ============================================================================

root_rule ::= template_item*

private template_item ::=
    smarty_tag
    | text_content
    | html_content

text_content ::= TEXT+ {pin=1}

html_content ::= html_tag {pin=1}

// ============================================================================
// SMARTY TAGS & COMMENTS
// ============================================================================

smarty_tag ::=
    smarty_literal_block
    | smarty_nocache_block
    | smarty_closing_tag
    | smarty_function_call

// Closing tags are matched flat rather than as a nesting construct: the features built on this
// PSI locate declarations by type, none of them need the block structure.
smarty_closing_tag ::= '{' '/' closing_keyword '}' {pin=2}

private closing_keyword ::=
    IF | FOREACH | FOR | WHILE | SECTION | SWITCH | BLOCK | FUNCTION
    | CAPTURE | STRIP | SETFILTER | NOCACHE | LITERAL_KW

// No rule for comments: the parser definition reports COMMENT as a comment token, so the
// builder skips it and the platform turns it into a PsiComment leaf of its own.

smarty_literal_block ::=
    '{' LITERAL_KW '}' verbatim_content* '{' '/' LITERAL_KW '}'
    {pin=2 methods=[getLiteralContent]}

smarty_nocache_block ::= '{' NOCACHE '}' verbatim_content* '{' '/' NOCACHE '}' {pin=2}

private verbatim_content ::= TEXT | html_tag

// ============================================================================
// FUNCTION CALLS & STATEMENTS
// ============================================================================

smarty_function_call ::= '{' function_body '}' {pin=1}

function_body ::=
    if_statement
    | elseif_statement
    | else_statement
    | foreach_statement
    | foreachelse_statement
    | for_statement
    | while_statement
    | section_statement
    | sectionelse_statement
    | switch_statement
    | case_statement
    | break_statement
    | continue_statement
    | block_statement
    | function_statement
    | call_statement
    | extends_statement
    | include_statement
    | insert_statement
    | assign_statement
    | append_statement
    | capture_statement
    | config_load_statement
    | debug_statement
    | setfilter_statement
    | ldelim_rdelim_statement
    | variable_output

// ============================================================================
// CONTROL STRUCTURES
// ============================================================================

if_statement ::= IF expr assign_clause* {pin=1}

elseif_statement ::= ELSEIF expr assign_clause* {pin=1}

else_statement ::= ELSE {pin=1}

foreach_statement ::=
    FOREACH [expr AS variable [FAT_ARROW variable]] assign_clause*
    {pin=1 name="foreach loop" methods=[getForeachVariable getForeachItems getForeachValueVar getForeachKeyVar]}

foreachelse_statement ::= FOREACHELSE {pin=1}

for_statement ::=
    FOR for_init ';' for_condition ';' for_increment assign_clause*
    {pin=1 name="for loop"}

private for_init ::= assignment
private for_condition ::= expr
private for_increment ::= assignment

while_statement ::= WHILE expr assign_clause* {pin=1 name="while loop"}

section_statement ::=
    SECTION IDENTIFIER assign_clause*
    {pin=1 name="section loop"}

sectionelse_statement ::= SECTIONELSE {pin=1}

switch_statement ::= SWITCH expr {pin=1}

case_statement ::= CASE case_value {pin=1}

private case_value ::= expr | DEFAULT

break_statement ::= BREAK [NUMBER]

continue_statement ::= CONTINUE [NUMBER]

// ============================================================================
// BLOCK & FUNCTION DEFINITIONS
// ============================================================================

block_statement ::=
    BLOCK declaration_name [APPEND | PREPEND] assign_clause*
    {
      pin=1
      mixin="ch.erlebnisbank.smarty.psi.impl.SmartyNamedElementImpl"
      implements="ch.erlebnisbank.smarty.psi.SmartyNamedElement"
      methods=[getName setName getNameIdentifier getPresentation]
    }

// Named for the same reason a block is: {function name="box"} declares something the rest of the
// project navigates to. Both rules read their name through declaration_name, so they share the
// helpers in SmartyPsiImplUtil.
function_statement ::=
    FUNCTION declaration_name [FUNCTION_PARAMS] assign_clause*
    {
      pin=1
      mixin="ch.erlebnisbank.smarty.psi.impl.SmartyNamedElementImpl"
      implements="ch.erlebnisbank.smarty.psi.SmartyNamedElement"
      methods=[getName setName getNameIdentifier getPresentation]
    }

// Both the attribute form used by nearly every real template - {block name="content"} - and the
// bare form {block content}.
private declaration_name ::= (IDENTIFIER '=' name_value) | name_value

private name_value ::= IDENTIFIER | STRING

private FUNCTION_PARAMS ::= LPAREN param_list RPAREN
private param_list ::= IDENTIFIER (',' IDENTIFIER)*

call_statement ::= CALL template_reference [call_arguments] {pin=1}

private template_reference ::= (IDENTIFIER | STRING) ('.' IDENTIFIER)*
private call_arguments ::= LPAREN [assign_list] RPAREN

// ============================================================================
// INCLUDE & EXTEND STATEMENTS
// ============================================================================

extends_statement ::= EXTENDS [STRING] assign_clause* {pin=1 mixin="ch.erlebnisbank.smarty.psi.impl.SmartyReferenceHostImpl"}

include_statement ::=
    INCLUDE [STRING] assign_clause* [NOCACHE]
    {pin=1 mixin="ch.erlebnisbank.smarty.psi.impl.SmartyReferenceHostImpl"}

insert_statement ::=
    INSERT [STRING | IDENTIFIER] assign_clause*
    {pin=1 mixin="ch.erlebnisbank.smarty.psi.impl.SmartyReferenceHostImpl"}

// ============================================================================
// ASSIGNMENT STATEMENTS
// ============================================================================

assign_statement ::=
    ASSIGN_KW variable '=' expr assign_clause*
    {pin=1 name="assign statement" methods=[getAssignTarget getAssignValue]}

append_statement ::=
    APPEND variable '=' expr assign_clause*
    {pin=1 name="append statement"}

capture_statement ::=
    CAPTURE variable assign_clause*
    {pin=1 name="capture statement"}

config_load_statement ::=
    CONFIG_LOAD [STRING] assign_clause*
    {pin=1}

debug_statement ::= DEBUG [DEBUG_VARS] {pin=1}

private DEBUG_VARS ::= (IDENTIFIER | variable) (',' (IDENTIFIER | variable))*

setfilter_statement ::=
    SETFILTER modifier_list
    {pin=1}

ldelim_rdelim_statement ::=
    LDELIM_KW | RDELIM_KW

// ============================================================================
// VARIABLE OUTPUT
// ============================================================================

variable_output ::=
    expr modifier_chain?
    {pin=1}

modifier_chain ::= modifier+

modifier ::=
    PIPE modifier_name [modifier_arguments]
    {pin=1 methods=[getModifierName getModifierParams]}

private modifier_name ::=
    UPPER | LOWER | CAPITALIZE | CAT | COUNT_PARAGRAPHS | COUNT_SENTENCES
    | COUNT_WORDS | DATE_FORMAT | ESCAPE | FROM_CHARSET | INDENT
    | NL2BR | REGEX_REPLACE | REPLACE | SPACIFY | STRING_FORMAT
    | STRIP_TAGS | TO_CHARSET | TRUNCATE | UNESCAPE | WORDWRAP | DEFAULT_MOD
    | IDENTIFIER

// Modifier parameters are colon separated, one colon per parameter:
// {$text|truncate:30:"...":true}. The rule used to allow a single colon followed by commas,
// which is neither what Smarty documents nor what getModifierParams already reads, so anything
// past the first parameter failed to parse.
private modifier_arguments ::=
    (COLON modifier_param)+

private modifier_param ::=
    expr

// ============================================================================
// EXPRESSIONS
// ============================================================================

expr ::=
    ternary_expr {methods=[getOperator isLiteral]}

private ternary_expr ::=
    logical_or_expr (QUESTION expr COLON expr)?

private logical_or_expr ::=
    logical_and_expr ((OR | OR_KEYWORD) logical_and_expr)*

private logical_and_expr ::=
    logical_not_expr ((AND | AND_KEYWORD) logical_not_expr)*

private logical_not_expr ::=
    ((NOT | NOT_KEYWORD) logical_not_expr)
    | comparison_expr

private comparison_expr ::=
    additive_expr (comparison_operator additive_expr)*

// MATCHES sits with the comparison operators because that is how Smarty documents it and how it
// reads - {if $a matches "/re/" && $b} groups the way the && suggests.
private comparison_operator ::=
    EQ | NEQ | EQEQ | NEQEQ | LT | GT | LE | GE
    | EQ_KEYWORD | NEQ_KEYWORD | LT_KEYWORD | GT_KEYWORD | LE_KEYWORD | GE_KEYWORD
    | MATCHES

private additive_expr ::=
    multiplicative_expr ((PLUS | MINUS) multiplicative_expr)*

private multiplicative_expr ::=
    unary_expr ((MULT | DIV | MOD | MOD_KEYWORD | DIV_KEYWORD) unary_expr)*

private unary_expr ::=
    ((PLUS | MINUS | NOT | NOT_KEYWORD) unary_expr)
    | postfix_expr

private postfix_expr ::=
    primary_expr (postfix_op)*

private postfix_op ::=
    member_access
    | array_access
    | method_call

private primary_expr ::=
    variable
    | literal
    | function_call
    | config_variable
    | LPAREN expr RPAREN
    | IDENTIFIER

// ============================================================================
// VARIABLES & MEMBER ACCESS
// ============================================================================

variable ::= DOLLAR variable_name {methods=[getName hasArrayAccess getArrayIndices getPropertyChain]}

private variable_name ::=
    IDENTIFIER member_access*

member_access ::=
    DOT IDENTIFIER
    | ARROW IDENTIFIER
    | array_access

array_access ::=
    LBRACKET array_index RBRACKET

private array_index ::=
    expr
    | IDENTIFIER
    | NUMBER

config_variable ::= AT IDENTIFIER

// ============================================================================
// FUNCTION CALLS
// ============================================================================

function_call ::=
    function_name LPAREN [argument_list] RPAREN {methods=[getFunctionName getFunctionArguments isBuiltinFunction]}

private function_name ::=
    IDENTIFIER

argument_list ::=
    named_argument (',' named_argument)*
    | positional_argument (',' positional_argument)*

private named_argument ::=
    IDENTIFIER '=' expr

private positional_argument ::=
    expr

// ============================================================================
// LITERALS
// ============================================================================

literal ::=
    NUMBER
    | STRING
    | BOOLEAN
    | NULL_LITERAL
    | ARRAY_LITERAL

// The lexer already folds yes/on into TRUE and no/off into FALSE.
private BOOLEAN ::= TRUE | FALSE

ARRAY_LITERAL ::=
    LBRACKET [array_element_list] RBRACKET

private array_element_list ::=
    array_element (',' array_element)* [COMMA]

private array_element ::=
    (expr '=>')? expr

// ============================================================================
// MISCELLANEOUS RULES
// ============================================================================

private assignment ::= variable ASSIGN expr

private assign_clause ::=
    IDENTIFIER '=' expr

private assign_list ::=
    assign_clause (',' assign_clause)*

private modifier_list ::=
    modifier (',' modifier)*

private not_pipe_or_rbrace ::=
    !(PIPE | RDELIM)
