src/main/gen/ch/erlebnisbank/smarty/parser/SmartyParser.java
// This is a generated file. Not intended for manual editing.
package ch.erlebnisbank.smarty.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static ch.erlebnisbank.smarty.psi.SmartyTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class SmartyParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    result_ = parse_root_(root_, builder_);
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_) {
    return parse_root_(root_, builder_, 0);
  }

  static boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return root_rule(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // LBRACKET [array_element_list] RBRACKET
  public static boolean ARRAY_LITERAL(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ARRAY_LITERAL")) return false;
    if (!nextTokenIs(builder_, LBRACKET)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LBRACKET);
    result_ = result_ && ARRAY_LITERAL_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RBRACKET);
    exit_section_(builder_, marker_, ARRAY_LITERAL, result_);
    return result_;
  }

  // [array_element_list]
  private static boolean ARRAY_LITERAL_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ARRAY_LITERAL_1")) return false;
    array_element_list(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // TRUE | FALSE
  static boolean BOOLEAN(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "BOOLEAN")) return false;
    if (!nextTokenIs(builder_, "", FALSE, TRUE)) return false;
    boolean result_;
    result_ = consumeToken(builder_, TRUE);
    if (!result_) result_ = consumeToken(builder_, FALSE);
    return result_;
  }

  /* ********************************************************** */
  // (IDENTIFIER | variable) (',' (IDENTIFIER | variable))*
  static boolean DEBUG_VARS(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DEBUG_VARS")) return false;
    if (!nextTokenIs(builder_, "", DOLLAR, IDENTIFIER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = DEBUG_VARS_0(builder_, level_ + 1);
    result_ = result_ && DEBUG_VARS_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // IDENTIFIER | variable
  private static boolean DEBUG_VARS_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DEBUG_VARS_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, IDENTIFIER);
    if (!result_) result_ = variable(builder_, level_ + 1);
    return result_;
  }

  // (',' (IDENTIFIER | variable))*
  private static boolean DEBUG_VARS_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DEBUG_VARS_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!DEBUG_VARS_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "DEBUG_VARS_1", pos_)) break;
    }
    return true;
  }

  // ',' (IDENTIFIER | variable)
  private static boolean DEBUG_VARS_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DEBUG_VARS_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && DEBUG_VARS_1_0_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // IDENTIFIER | variable
  private static boolean DEBUG_VARS_1_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DEBUG_VARS_1_0_1")) return false;
    boolean result_;
    result_ = consumeToken(builder_, IDENTIFIER);
    if (!result_) result_ = variable(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // LPAREN param_list RPAREN
  static boolean FUNCTION_PARAMS(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "FUNCTION_PARAMS")) return false;
    if (!nextTokenIs(builder_, LPAREN)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LPAREN);
    result_ = result_ && param_list(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RPAREN);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // multiplicative_expr ((PLUS | MINUS) multiplicative_expr)*
  static boolean additive_expr(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "additive_expr")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, null, "<expression>");
    result_ = multiplicative_expr(builder_, level_ + 1);
    result_ = result_ && additive_expr_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // ((PLUS | MINUS) multiplicative_expr)*
  private static boolean additive_expr_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "additive_expr_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!additive_expr_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "additive_expr_1", pos_)) break;
    }
    return true;
  }

  // (PLUS | MINUS) multiplicative_expr
  private static boolean additive_expr_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "additive_expr_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = additive_expr_1_0_0(builder_, level_ + 1);
    result_ = result_ && multiplicative_expr(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // PLUS | MINUS
  private static boolean additive_expr_1_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "additive_expr_1_0_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, PLUS);
    if (!result_) result_ = consumeToken(builder_, MINUS);
    return result_;
  }

  /* ********************************************************** */
  // APPEND variable '=' expr assign_clause*
  public static boolean append_statement(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "append_statement")) return false;
    if (!nextTokenIs(builder_, "<append statement>", APPEND)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, APPEND_STATEMENT, "<append statement>");
    result_ = consumeToken(builder_, APPEND);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, variable(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, consumeToken(builder_, ASSIGN)) && result_;
    result_ = pinned_ && report_error_(builder_, expr(builder_, level_ + 1)) && result_;
    result_ = pinned_ && append_statement_4(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // assign_clause*
  private static boolean append_statement_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "append_statement_4")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!assign_clause(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "append_statement_4", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // named_argument (',' named_argument)*
  //     | positional_argument (',' positional_argument)*
  public static boolean argument_list(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argument_list")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ARGUMENT_LIST, "<argument list>");
    result_ = argument_list_0(builder_, level_ + 1);
    if (!result_) result_ = argument_list_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // named_argument (',' named_argument)*
  private static boolean argument_list_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argument_list_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = named_argument(builder_, level_ + 1);
    result_ = result_ && argument_list_0_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // (',' named_argument)*
  private static boolean argument_list_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argument_list_0_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!argument_list_0_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "argument_list_0_1", pos_)) break;
    }
    return true;
  }

  // ',' named_argument
  private static boolean argument_list_0_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argument_list_0_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && named_argument(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // positional_argument (',' positional_argument)*
  private static boolean argument_list_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argument_list_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = positional_argument(builder_, level_ + 1);
    result_ = result_ && argument_list_1_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // (',' positional_argument)*
  private static boolean argument_list_1_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argument_list_1_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!argument_list_1_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "argument_list_1_1", pos_)) break;
    }
    return true;
  }

  // ',' positional_argument
  private static boolean argument_list_1_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argument_list_1_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && positional_argument(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // LBRACKET array_index RBRACKET
  public static boolean array_access(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "array_access")) return false;
    if (!nextTokenIs(builder_, LBRACKET)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LBRACKET);
    result_ = result_ && array_index(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RBRACKET);
    exit_section_(builder_, marker_, ARRAY_ACCESS, result_);
    return result_;
  }

  /* ********************************************************** */
  // (expr '=>')? expr
  static boolean array_element(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "array_element")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = array_element_0(builder_, level_ + 1);
    result_ = result_ && expr(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // (expr '=>')?
  private static boolean array_element_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "array_element_0")) return false;
    array_element_0_0(builder_, level_ + 1);
    return true;
  }

  // expr '=>'
  private static boolean array_element_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "array_element_0_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = expr(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, FAT_ARROW);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // array_element (',' array_element)* [COMMA]
  static boolean array_element_list(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "array_element_list")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_);
    result_ = array_element(builder_, level_ + 1);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, array_element_list_1(builder_, level_ + 1));
    result_ = pinned_ && array_element_list_2(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // (',' array_element)*
  private static boolean array_element_list_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "array_element_list_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!array_element_list_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "array_element_list_1", pos_)) break;
    }
    return true;
  }

  // ',' array_element
  private static boolean array_element_list_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "array_element_list_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && array_element(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // [COMMA]
  private static boolean array_element_list_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "array_element_list_2")) return false;
    consumeToken(builder_, COMMA);
    return true;
  }

  /* ********************************************************** */
  // expr
  //     | IDENTIFIER
  //     | NUMBER
  static boolean array_index(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "array_index")) return false;
    boolean result_;
    result_ = expr(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, IDENTIFIER);
    if (!result_) result_ = consumeToken(builder_, NUMBER);
    return result_;
  }

  /* ********************************************************** */
  // IDENTIFIER '=' expr
  static boolean assign_clause(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assign_clause")) return false;
    if (!nextTokenIs(builder_, IDENTIFIER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, IDENTIFIER, ASSIGN);
    result_ = result_ && expr(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // assign_clause (',' assign_clause)*
  static boolean assign_list(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assign_list")) return false;
    if (!nextTokenIs(builder_, IDENTIFIER)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_);
    result_ = assign_clause(builder_, level_ + 1);
    pinned_ = result_; // pin = 1
    result_ = result_ && assign_list_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // (',' assign_clause)*
  private static boolean assign_list_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assign_list_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!assign_list_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "assign_list_1", pos_)) break;
    }
    return true;
  }

  // ',' assign_clause
  private static boolean assign_list_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assign_list_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && assign_clause(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }
